--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+#server port number
 server.port = 8282
 
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+#datasource (oracle)
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=scott
 spring.datasource.password=tiger
+
+
+#xml location
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+
+#### jsp \uC0AC\uC6A9\uD560 \uACBD\uC6B0
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+server.jsp-servlet.init-parameters.development=true
