--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.datasource.password=tiger
 #xml location
 mybatis.mapper-locations=classpath:mappers/**/*.xml
 
-#### jsp \uC0AC\uC6A9\uD560 \uACBD\uC6B0
+#### jsp 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-server.jsp-servlet.init-parameters.development=true
+spring.thymeleaf.view-names=thymeleaf/*
+
+
